Fixed results summary not showing

--- a/style/results.css
+++ b/style/results.css
@@ -12,6 +12,7 @@
 
 .resultsSummary {
     text-align: center;
+    margin-top: 0;
 }
 
 .result {
